--- a/lesson1.html
+++ b/lesson1.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang "en">
-    <head> <!--> title bar, not visible page content <!-->
-        <meta charset="utf-8">
+    <head>
+        <!--> title bar, not visible page content <!-->
+        <meta charset="utf-8"> <!--> character encoding <!-->
         <title>Hello World</title>
     </head>
 
     <body> <!--> all visible content <!-->
+        <h1>Building Web Pages</h1>
         <h2 id="htmlvscss">HTML vs. CSS</h2>
         <p>HTML - defines structure and content; headings, paragraphs, images</p>
         <p>CSS - appearance and style of the content; fonts and colours</p>
@@ -17,6 +19,8 @@
 
         <h3>Example</h3>
         <a href="https://github.com/ryotokuro">Github</a> <!-->attribute<!-->
+        
+        <img href="https://static1.squarespace.com/static/597febe6725e2529bad5fc50/t/59adb4d8f9a61e6ef1356189/1504556343415/Frank+Ocean+Master+List+Header+Featured?format=1500w">
 
     </body>
 </html>
