added eric meyer's css reset, added some folders for better organisation

--- a/lesson1.html
+++ b/lesson1.html
@@ -21,7 +21,7 @@
         <a href="https://github.com/ryotokuro">Github</a> <!-- attribute -->
         
         <figure>
-            <img alt="HTML Syntax Outline" src=html-syntax-outline.png>
+            <img alt="HTML Syntax Outline" src=/assets/html-syntax-outline.png>
             <figcaption>HTML Syntax Outline</figcaption>
         </figure>
 
