--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="assets/stylesheets/main.css">
         <meta charset="utf-8">
         <title>Styles Conference</title>
     </head>
