added intro notes for lesson 2

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -1,1 +1,11 @@
 <!--Lesson 2: Getting to Know HTML-->
+
+<!-- Semantics within HTML
+    - The practice of giving content on the page MEANING and STRUCTURE by using the proper element.
+    - Describes the VALUE of the content on a page; regardless of style/appearance
+    - Benefits of using SEMANTIC elemnts are:
+        - Hi everyone,
+Hope you've been having a great midsem break!
+Thanks to all your efforts we've successfully submitted the proposal and next week we're starting prototyping and rolling out workshops!
+
+📸 Tsz Kin William LIU
