added headers and such

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -7,3 +7,10 @@
 
 Divisions and Spans
 <div> and <span> are elements that act as CONTAINERS solely for styling
+
+
+Text Based Elements
+
+Building Structure
+
+Hyperlinks
