added changes to information

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -3,10 +3,11 @@
 <!-- Semantics within HTML
     - The practice of giving content on the page MEANING and STRUCTURE by using the proper element.
     - Describes the VALUE of the content on a page; regardless of style/appearance
-    - Benefits of using SEMANTIC elemnts are:
+    - Using SEMANTICS makes it easier for computers, search engines and other devices (screens) to read and understand the content on the web page
 
 Divisions and Spans
-<div> and <span> are elements that act as CONTAINERS solely for styling
+<div> and <span> are elements that act as CONTAINERS used for STYLING ONLY (not semantics).
+
 
 
 Text Based Elements
