defining <div> and <span> and defining semantics comparison

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -7,7 +7,8 @@
 
 Divisions and Spans
 <div> and <span> are elements that act as CONTAINERS used for STYLING ONLY (not semantics).
-
+PARAGRAPHS on the other hand are SEMANTIC as they make the content wrapped within a <p> known and understood as a paragraph.
+<div>s and <span>s do not hold any meaning and are simply generic containers.
 
 
 Text Based Elements
