block vs inline

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -10,6 +10,12 @@ Divisions and Spans
 PARAGRAPHS on the other hand are SEMANTIC as they make the content wrapped within a <p> known and understood as a paragraph.
 <div>s and <span>s do not hold any meaning and are simply generic containers.
 
+Block vs. Inline Elements
+1. BLOCK
+    - elements begin on a new line
+
+2. INLINE
+    - same line
 
 Text Based Elements
 
