added more details block, inline

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -13,6 +13,9 @@ PARAGRAPHS on the other hand are SEMANTIC as they make the content wrapped withi
 Block vs. Inline Elements
 1. BLOCK
     - elements begin on a new line
+    - occupy any available width
+    - may be nested inside one another
+    - may wrap inline elements
 
 2. INLINE
     - same line
