cleared up block vs inline

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -16,9 +16,14 @@ Block vs. Inline Elements
     - occupy any available width
     - may be nested inside one another
     - may wrap inline elements
+    - used usually for LARGER pieces of content; paragraphs
 
 2. INLINE
     - same line
+    - fall in normal flow of document; line up one after the other
+    - may nest in-line elements
+    - cannot wrap block-level elements
+    - usually for SMALLER pieces; few words
 
 Text Based Elements
 
