added further info on divs and spans

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -10,6 +10,13 @@ Divisions and Spans
 PARAGRAPHS on the other hand are SEMANTIC as they make the content wrapped within a <p> known and understood as a paragraph.
 <div>s and <span>s do not hold any meaning and are simply generic containers.
 
+<div>s and <span>s allow targeted styles onto contained sets of content.
+A <div> is a BLOCK-level element (identifies LARGE GROUPINGS of content)
+    - helps build the webpage layout/design
+
+A <span> is an INLINE-level element (for SMALL GROUPINGS of text)
+    - within a block level element
+
 Block vs. Inline Elements
 1. BLOCK
     - elements begin on a new line
