adding example, adding more info

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -17,6 +17,8 @@ A <div> is a BLOCK-level element (identifies LARGE GROUPINGS of content)
 A <span> is an INLINE-level element (for SMALL GROUPINGS of text)
     - within a block level element
 
+<div>s and <span>s are commonly paired with CLASS or ID attributes for STYLING purposes.
+
 Block vs. Inline Elements
 1. BLOCK
     - elements begin on a new line
@@ -36,4 +38,5 @@ Text Based Elements
 
 Building Structure
 
-Hyperlinks
+Hyperlinks -->
+<div class="social"></div>
