added more info :)

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -38,5 +38,9 @@ Text Based Elements
 
 Building Structure
 
-Hyperlinks -->
-<div class="social"></div>
+qHyperlinks -->
+
+<div class="social">
+    <p>You can find me on...</p>
+    <p>Additionally, I have a profile on...</p>
+</div>
