--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -38,9 +38,13 @@ Text Based Elements
 
 Building Structure
 
-qHyperlinks -->
+Hyperlinks -->
 
+<!-- Division: labelled class SOCIAL for social media content -->
 <div class="social">
     <p>You can find me on...</p>
     <p>Additionally, I have a profile on...</p>
 </div>
+
+<!-- Span -->
+<p>Soon we'll be <span class="tooltip">writing HTML</span> with the best of them.</p>
