added info on headings

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -34,7 +34,14 @@ Block vs. Inline Elements
     - cannot wrap block-level elements
     - usually for SMALLER pieces; few words
 
-Text Based Elements
+Using Text Based Elements
+1. Headings
+    - block-level elements
+    - SIX different rankings
+        * <h1> to <h6>
+    - help break up content and establish hierarchy
+    - also help SEARCH ENGINES index and determine content on a page
+    - typically used in order
 
 Building Structure
 
