--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -43,6 +43,15 @@ Using Text Based Elements
     - also help SEARCH ENGINES index and determine content on a page
     - typically used in order
 
+    DEMO: -->
+<h1>Heading Level 1</h1>
+<h2>Heading Level 1</h2>
+<h3>Heading Level 1</h3>
+<h4>Heading Level 1</h4>
+<h5>Heading Level 1</h5>
+<h6>Heading Level 1</h6>
+
+<!--
 Building Structure
 
 Hyperlinks -->
