--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -43,13 +43,23 @@ Using Text Based Elements
     - also help SEARCH ENGINES index and determine content on a page
     - typically used in order
 
-    DEMO: -->
+    EXAMPLE: -->
 <h1>Heading Level 1</h1>
 <h2>Heading Level 1</h2>
 <h3>Heading Level 1</h3>
 <h4>Heading Level 1</h4>
 <h5>Heading Level 1</h5>
 <h6>Heading Level 1</h6>
+
+<!--
+2. Paragraphs
+    - come after Headings (support)
+    - defined using <p> block-level element
+
+    EXAMPLE: -->
+<p>Steve Jobs was a co-founder and longtime chief executive officer at Apple. On June 12, 2005, Steve gave the commencement address at Stanford University.</p>
+
+<p>In his address Steve urged graduates to follow their dreams and, despite any setbacks, to never give up&ndash;advice which he sincerely took to heart</p>
 
 <!--
 Building Structure
