added bold vs strong tags

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -62,6 +62,24 @@ Using Text Based Elements
 <p>In his address Steve urged graduates to follow their dreams and, despite any setbacks, to never give up&ndash;advice which he sincerely took to heart</p>
 
 <!--
+3. Bold Text with Strong
+    - to make text BOLD and place a STRONG importance on it
+    - use <strong> inline-level element
+
+* <strong> is to SEMANTICALLY give STRONG IMPORTANCE
+* <b> is solely used to stylistically offset text (reserve), adding no extra significance
+
+    EXAMPLE: -->
+<!-->Strong importance-->
+<p><strong>Caution:</strong> Falling rocks!</p>
+
+<!-- Stylistically offset-->
+<p>This recipe calls for <b>bacon</b> and <b>baconnaise</b>.</p>
+
+<!--
+4. Italicise Text with Emphasis
+
+
 Building Structure
 
 Hyperlinks -->
