added <em> vs <i> elements

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -64,13 +64,13 @@ Using Text Based Elements
 <!--
 3. Bold Text with Strong
     - to make text BOLD and place a STRONG importance on it
-    - use <strong> inline-level element
+    - use <strong> (inline-level element)
 
 * <strong> is to SEMANTICALLY give STRONG IMPORTANCE
 * <b> is solely used to stylistically offset text (reserve), adding no extra significance
 
     EXAMPLE: -->
-<!-->Strong importance-->
+<!-- Strong importance-->
 <p><strong>Caution:</strong> Falling rocks!</p>
 
 <!-- Stylistically offset-->
@@ -78,8 +78,19 @@ Using Text Based Elements
 
 <!--
 4. Italicise Text with Emphasis
+    - place emphasis
+    - using <em> (inline-level element)
+    * <em> places a STRESSED EMPHASIS on the text
+    - <i> semantically conveys an alternative voice/tone
 
+    EXAMPLE: -->
+<!-- Stressed emphasis -->
+<p> I <em>love</em> Chicago!</p>
 
+<!-- Alternative voice or tone -->
+<p>The name <i>Shay</i> means a gift.</p>
+
+<!--
 Building Structure
 
 Hyperlinks -->
