reset some items

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -92,6 +92,7 @@ Using Text Based Elements
 
 <!--
 Building Structure
+* These elements help define grouping of structured elements
 
 Hyperlinks -->
 
