added example semanticbuilds

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -93,6 +93,12 @@ Using Text Based Elements
 <!--
 Building Structure
 * These elements help define grouping of structured elements
+    - <header>
+    - <nav>
+    - <article>
+    - <section>
+    - <aside>
+    - <footer>
 
 Hyperlinks -->
 
