added image and header

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -100,7 +100,12 @@ Building Structure
     - <aside>
     - <footer>
 
+1. Header
+    - identifies the top of a page, section or egment
+
 Hyperlinks -->
+
+
 
 <!-- Division: labelled class SOCIAL for social media content -->
 <div class="social">
