added more information about header element; differences between <head>

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -101,8 +101,10 @@ Building Structure
     - <footer>
 
 1. Header
-    - identifies the top of a page, section or egment
-
+    - identifies the top of a page, section or segment
+    * DIFFERENT to the <head>
+    - outlines the "HEADING" of a body segment (text)
+    * <head> outlines the the metadata; document title, links to external files
 Hyperlinks -->
 
 
