added navigation info

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -105,6 +105,14 @@ Building Structure
     * DIFFERENT to the <head>
     - outlines the "HEADING" of a body segment (text)
     * <head> outlines the the metadata; document title, links to external files
+
+2. Navigation
+    - <nav>
+    - section of major NAVIGATIONAL LINKS
+    - reserved for primary nav sections
+        i.e. global navigation, ToC, prev/next
+    * misc one-off links should use <a> anchor element
+
 Hyperlinks -->
 
 
