added info on article

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -113,6 +113,11 @@ Building Structure
         i.e. global navigation, ToC, prev/next
     * misc one-off links should use <a> anchor element
 
+3. Article
+    - identifies section of independent, self contained content
+    - may be independently distributed or reused
+    - used to mark up blog posts, newspaper articles, user-submitted content
+
 Hyperlinks -->
 
 
