added section information

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -118,6 +118,11 @@ Building Structure
     - may be independently distributed or reused
     - used to mark up blog posts, newspaper articles, user-submitted content
 
+4. Section
+    - used to identify a thematic grouping of content
+    - generally includes a heading
+    - helps break up and provide hierarchy
+
 Hyperlinks -->
 
 
