added aside information

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -123,6 +123,10 @@ Building Structure
     - generally includes a heading
     - helps break up and provide hierarchy
 
+5. Aside
+    - holds sidebars, inserts or brief explanations of content
+    e.g. when used with <article>, <aside> may help identify content related to the author
+
 Hyperlinks -->
 
 
