added footer information

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -127,6 +127,10 @@ Building Structure
     - holds sidebars, inserts or brief explanations of content
     e.g. when used with <article>, <aside> may help identify content related to the author
 
+6. Footer
+    - identifies closing/ending of a page, article, section, segment
+    - found at the BOTTOM of its parent
+
 Hyperlinks -->
 
 
