--- a/Lesson 2/index.html
+++ b/Lesson 2/index.html
@@ -7,7 +7,10 @@
         <title>Styles Conference</title>
     </head>
     <body>
-        <h1>Styles Conference</h1>
+        <header>
+            <h1>Styles Conference</h1>
+            <h3>August 24 &ndash; 26th &mdash; Chicago, IL</h3>
+        </header>
         <p>Every year, the biggest and brightest web designers and developers (front end) gather in Chicago to discuss the latest technologies. Join us next August!</p>
     </body>
 </html>
