--- a/Lesson 2/index.html
+++ b/Lesson 2/index.html
@@ -11,6 +11,11 @@
             <h1>Styles Conference</h1>
             <h3>August 24 &ndash; 26th &mdash; Chicago, IL</h3>
         </header>
-        <p>Every year, the biggest and brightest web designers and developers (front end) gather in Chicago to discuss the latest technologies. Join us next August!</p>
+        
+        <section>
+            <h2>Dedicated to the Craft of Building Websites</h2>
+            <p>Every year, the biggest and brightest web designers and developers (front end) gather in Chicago to discuss the latest technologies. Join us next August!</p>
+        </section>
+        
     </body>
 </html>
