--- a/Lesson 2/index.html
+++ b/Lesson 2/index.html
@@ -17,5 +17,9 @@
             <p>Every year, the biggest and brightest web designers and developers (front end) gather in Chicago to discuss the latest technologies. Join us next August!</p>
         </section>
         
+        <footer>
+            <small>&copy; Styles conference</small>
+        </footer>
+        
     </body>
 </html>
