added basic anchor hyperlink info and example

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -131,9 +131,17 @@ Building Structure
     - identifies closing/ending of a page, article, section, segment
     - found at the BOTTOM of its parent
 
-Hyperlinks -->
+Creating Hyperlinks
+    - Established using the ANCHOR <a>
+    - Links are created using the HREF attribute (hyperlink reference)
+    EXAMPLE: -->
+<a href="https://www.youtube.com/watch?v=WBKnpyoFEBo">No Air Music Video</a>
+
+<!--
+Relative & Absolute Paths
 
 
+-->
 
 <!-- Division: labelled class SOCIAL for social media content -->
 <div class="social">
