added relative paths for links

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -139,7 +139,11 @@ Creating Hyperlinks
 
 <!--
 Relative & Absolute Paths
-
+a) RELATIVE
+    - links pointing to the SAME website
+    - does not include the domain (.com, .org, .edu, etc)
+    - only requires the file name of the page
+    * EXAMPLE: about.html
 
 -->
 
