added info about absolute path

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -145,7 +145,18 @@ a) RELATIVE
     - only requires the file name of the page
     * EXAMPLE: about.html
 
+RELATIVE: DIFFERENT DIRECTORY
+    - href needs to reflect it
+    - if it lives inside the pages directly then:
+        * pages/about.html
+
+b) ABSOLUTE: EXTERNAL SITE
+    - needs the FULL domain
+    * EXAMPLE: http://google.com (including http and domain, .com)
+
+    HTML EXAMPLE:
 -->
+
 
 <!-- Division: labelled class SOCIAL for social media content -->
 <div class="social">
