--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -156,7 +156,14 @@ b) ABSOLUTE: EXTERNAL SITE
 
     HTML EXAMPLE:
 -->
+<!-- Relative Path-->
+<a href="about.html">About</a>
 
+<!-- Folder Relative Path-->
+<a href="pages/about.html">About in a further folder</a>
+
+<!-- Absolute Path-->
+<a href="http://google.com">Google</a>
 
 <!-- Division: labelled class SOCIAL for social media content -->
 <div class="social">
