added email info

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -38,7 +38,7 @@ Using Text Based Elements
 1. Headings
     - block-level elements
     - SIX different rankings
-        * <h1> to <h6>
+        * <h1> to <h6>  
     - help break up content and establish hierarchy
     - also help SEARCH ENGINES index and determine content on a page
     - typically used in order
@@ -164,6 +164,10 @@ b) ABSOLUTE: EXTERNAL SITE
 
 <!-- Absolute Path-->
 <a href="http://google.com">Google</a>
+
+<!-- Linking to an Email Address
+    - Hyperlink to email address
+    - Subject and body text may also be filled in partially
 
 <!-- Division: labelled class SOCIAL for social media content -->
 <div class="social">
