--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -169,6 +169,9 @@ b) ABSOLUTE: EXTERNAL SITE
     - Hyperlink to email address
     - Subject and body text may also be filled in partially
 
+To create an email link:
+    - href attribute needs to start with 'mailto: ' followed by the parent email
+
 <!-- Division: labelled class SOCIAL for social media content -->
 <div class="social">
     <p>You can find me on...</p>
