adding more info about populating emails in html

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -172,6 +172,10 @@ b) ABSOLUTE: EXTERNAL SITE
 To create an email link:
     - href attribute needs to start with 'mailto: ' followed by the parent email
 
+Additionally, subject, body and other info can be pre-populated
+* SUBJECT
+subject= parameter (after email address)
+
 <!-- Division: labelled class SOCIAL for social media content -->
 <div class="social">
     <p>You can find me on...</p>
