added target _blank for new window opens

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -154,8 +154,7 @@ b) ABSOLUTE: EXTERNAL SITE
     - needs the FULL domain
     * EXAMPLE: http://google.com (including http and domain, .com)
 
-    HTML EXAMPLE:
--->
+    HTML EXAMPLE: -->
 <!-- Relative Path-->
 <a href="about.html">About</a>
 
@@ -191,6 +190,14 @@ e.g. subject=text1&body=text2
 
 * EXAMPLE: -->
 <a href="mailto:ryotokuro@gmail.com?subject=Good%20Morning!&body=Have%20a%20good%20day!%0ACheers%20:)">Send a friendly email!</a>
+    
+<!-- 
+Opening Links in a New Window
+* By default they open in the SAME WINDOW
+* To trigger it to open in a NEW WINDOW, we use the 'target' attribute with a value of '_blank'
+
+* EXAMPLE: -->
+<a href="github.com/ryotokuro" target="_blank">GitHub (open in new window)</a>
 
 <!-- Division: labelled class SOCIAL for social media content -->
 <div class="social">
