fixed links, added new info

--- a/Lesson 2/lesson2.html
+++ b/Lesson 2/lesson2.html
@@ -197,7 +197,14 @@ Opening Links in a New Window
 * To trigger it to open in a NEW WINDOW, we use the 'target' attribute with a value of '_blank'
 
 * EXAMPLE: -->
-<a href="github.com/ryotokuro" target="_blank">GitHub (open in new window)</a>
+<a href="http://github.com/ryotokuro" target="_blank">GitHub (open in new window)</a>
+
+<!--
+Linking to Parts of the Same Page
+* Links that link to certain parts/sections of the page
+e.g. "Back to top" links
+
+* On-page links are done by 
 
 <!-- Division: labelled class SOCIAL for social media content -->
 <div class="social">
