added information about different selector weights

--- a/Lesson 3 - Getting to know CSS/index.html
+++ b/Lesson 3 - Getting to know CSS/index.html
@@ -8,5 +8,9 @@
         <p>
             This is a test paragraph
         </p>
+        
+        <p id="test">
+            Test paragraph 2
+        </p>
     </body>
 </html>
