added example of combining selectors

--- a/Lesson 3 - Getting to know CSS/index.html
+++ b/Lesson 3 - Getting to know CSS/index.html
@@ -12,5 +12,11 @@
         <p id="test">
             Test paragraph 2
         </p>
+        
+        <div class="hotdog">
+            <p class="mustard">
+                Not hotdog
+            </p>
+        </div>
     </body>
 </html>
