added new code comparing display methods in HTML/CSS

--- a/Lesson 4 - Opening the Box Model/index.html
+++ b/Lesson 4 - Opening the Box Model/index.html
@@ -4,5 +4,12 @@
     <head>
     </head>
     <body>
+        <p class="block">
+            Block Element
+        </p>
+        
+        <p class="inline">
+            Block Element
+        </p>
     </body>
 </html>
