added changes and new files implementing box width practices

--- a/Lesson 4 - Opening the Box Model/index.html
+++ b/Lesson 4 - Opening the Box Model/index.html
@@ -95,5 +95,9 @@
             The possibilities are endless
         </div>
         
+        <div class="content-box">
+            Content Box
+        </div>
+        
     </body>
 </html>
