added three column structure and the implementation of CSS in reusing structure for webpages

--- a/Lesson 5 - Positioning Content/index.html
+++ b/Lesson 5 - Positioning Content/index.html
@@ -10,15 +10,16 @@
     <header>
         <h1>Header goes here</h1>
     </header>
-    <section>
-        <p>Column 3</p>
-    </section>
-    <section>
-        <p>Column 2</p>
-    </section>
-    <section>
-        <p>Column 1</p>
-    </section>
+    <!-- implementing a CLEARFIX or container for floats here -->
+    <div class="group">
+        <section>
+            <p>Column 2: There isn't much to talk about here but I'll put two lines just for testing purposes really :)</p>
+        </section>
+        <aside>
+            <p>Column 1: This is the first column providing we are using float left to stack the other boxes</p>
+        </aside>
+    </div>
+    
     <footer>
         <p>The very bottom</p>
     </footer>
