--- a/Lesson 5 - Positioning Content/styles.html
+++ b/Lesson 5 - Positioning Content/styles.html
@@ -42,13 +42,15 @@
         Schedule
         -->
         <section class="col-1-3">
-            Somewhere here
+            <a>Schedule</a>
+            <p>Enjoy three inspiring and action-packed days of talks, gatherings and all-around good times. Fun for everyone interested in tech and websites in general.</p>
         </section>
         <!--
         Venue
         -->
         <section class="col-1-3">
-            There are several cities:
+            <a>Locations</a>
+            <p>There are several cities within the hearts where this convention will take place. See find out where you can visit locally.</p>
             <p>Chicago</p>
             <p>Los Angeles</p>
             <p>Italy</p>
@@ -62,6 +64,6 @@
     </section>
 
     <footer class="container">
-        Champagne here.
+        Food and drinks provided.
     </footer>
 </body></html>
