--- a/Lesson 5 - Positioning Content/index.html
+++ b/Lesson 5 - Positioning Content/index.html
@@ -31,7 +31,7 @@
     </div>
     
     <section class="absolute">
-        This is absolute madness.
+        This is absolute madness. Aquaducts.
     </section>
     
     <footer>
