--- a/Lesson 6 - Working with Typography/styles.html
+++ b/Lesson 6 - Working with Typography/styles.html
@@ -9,11 +9,13 @@
 
 <body>
     <header class="container">
-        <h1><strong>Styles Conference</strong></h1>
-        <h2>August 24 - 26th - Chicago, IL</h2>
+        <h1 class="logo">
+            <strong>Styles Conference</strong>
+        </h1>
+        <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
     </header>
 
-    <nav>
+    <nav class="primary-nav">
         <a href="/">Main</a>
         <a href="/">Speakers</a>
         <a href="/">Schedule</a>
@@ -21,49 +23,64 @@
         <a href="/">Register</a>
     </nav>
 
-    <section class="description">
-        Dedicated to the craft of 'Building Websites'. Every year, the brightests web designers and front-end developers descend onto Chi-town to discuss and showcase the latest technologies. Join us this upcoming August!
-    </section>
+    <section class="hero container">
+        <section class="description">
+            <h2>Dedicated to the craft of 'Building Websites'.</h2>
+            <p>Every year, the brightests web designers and front-end developers descend onto Chi-town to discuss and showcase the latest technologies. Join us this upcoming August!</p>
 
-    <section class="container">
-        <a class="btn btn-alt" href="https://github.com/ryotokuro">
-            Register Now!
-        </a>
+            <a class="btn btn-alt" href="https://github.com/ryotokuro">
+                Register Now!
+            </a>
+        </section>
     </section>
 
     <section class="grid">
         <!-- Speakers -->
-        <section class="col-1-3">
-            <a>Speakers</a>
+        <section class="teaser col-1-3">
+            <a href="speakers.html">
+                <h5>Speakers</h5>
+                <h3>World-Class Speakers</h3>
+            </a>
             <p>Joining us from all around the world, are over twenty fantastic speakers who currently operate in the industry. Come along to listen to them speak on their stories. Our panellists are:</p>
             Richard Buckland
         </section>
         <!--
         Schedule
         -->
-        <section class="col-1-3">
-            <a>Schedule</a>
+        <section class="teaser col-1-3">
+            <a href="schedule.html">
+                <h5>Schedule</h5>
+                <h3>Three Inspiring Days</h3>
+            </a>
             <p>Enjoy three inspiring and action-packed days of talks, gatherings and all-around good times. Fun for everyone interested in tech and websites in general.</p>
         </section>
         <!--
         Venue
         -->
-        <section class="col-1-3">
-            <a>Locations</a>
+        <section class="teaser col-1-3">
+            <a href="venue.html">
+                <h5>Venue</h5>
+                <h3>The Chicago Theatre</h3>
+            </a>
             <p>There are several cities within the hearts where this convention will take place. See find out where you can visit locally.</p>
+            <!--
             <p>Chicago</p>
             <p>Los Angeles</p>
             <p>Italy</p>
             <p>Melbourne</p>
             <p>Sydney</p>
+            -->
         </section>
     </section>
 
-    <section class="hero container">
-
-    </section>
-
-    <footer class="container">
-        Food and drinks provided.
+    <footer class="container primary-footer">
+        &copy; Styles Conference
+        <div class="small">
+            <a>Home</a>
+            <a>Speakers</a>
+            <a>Schedule</a>
+            <a>Venue</a>
+            <a>Register</a>
+        </div>
     </footer>
 </body></html>
