centred content, moved things around, removed anchor underlines, updating html

--- a/Lesson 6 - Working with Typography/styles.html
+++ b/Lesson 6 - Working with Typography/styles.html
@@ -1,36 +1,32 @@
 <!doctype html>
 <html>
-
 <head>
-    <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
     <title>Styles Conference</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header class="container">
-        <h1 class="logo">
-            <strong>Styles Conference</strong>
-        </h1>
-        <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
-    </header>
+    <header class="container group">
+        <h1 class="logo"><strong>Styles Conference</strong></h1>
 
-    <nav class="primary-nav">
-        <a href="/">Main</a>
-        <a href="/">Speakers</a>
-        <a href="/">Schedule</a>
-        <a href="/">Venue</a>
-        <a href="/">Register</a>
-    </nav>
+        <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
+
+        <nav class="nav primary-nav">
+            <a href="styles.html">Home</a>
+            <a href="speakers.html">Speakers</a>
+            <a href="schedule.html">Schedule</a>
+            <a href="venue.html">Venue</a>
+            <a href="register.html">Register</a>
+        </nav>
+    </header>
 
     <section class="hero container">
         <section class="description">
             <h2>Dedicated to the craft of 'Building Websites'.</h2>
-            <p>Every year, the brightests web designers and front-end developers descend onto Chi-town to discuss and showcase the latest technologies. Join us this upcoming August!</p>
+            <p>Every year, the brightest web designers and front-end developers descend onto Chi-town to discuss the latest technologies. Join us this upcoming August!</p>
 
-            <a class="btn btn-alt" href="https://github.com/ryotokuro">
-                Register Now!
-            </a>
+            <a class="btn btn-alt" href="register.html">Register Now!</a>
         </section>
     </section>
 
@@ -63,24 +59,18 @@
                 <h3>The Chicago Theatre</h3>
             </a>
             <p>There are several cities within the hearts where this convention will take place. See find out where you can visit locally.</p>
-            <!--
-            <p>Chicago</p>
-            <p>Los Angeles</p>
-            <p>Italy</p>
-            <p>Melbourne</p>
-            <p>Sydney</p>
-            -->
+
         </section>
     </section>
 
-    <footer class="container primary-footer">
-        &copy; Styles Conference
-        <div class="small">
-            <a>Home</a>
-            <a>Speakers</a>
-            <a>Schedule</a>
-            <a>Venue</a>
-            <a>Register</a>
-        </div>
+    <footer class="container primary-footer group">
+        <small>&copy; Styles Conference</small>
+        <nav class="nav">
+            <a href="styles.html">Home</a>
+            <a href="speakers.html">Speakers</a>
+            <a href="schedule.html">Schedule</a>
+            <a href="venue.html">Venue</a>
+            <a href="register.html">Register</a>
+        </nav>
     </footer>
 </body></html>
