updating font styles but can't seem to change the weight again...

--- a/Lesson 6 - Working with Typography/styles.html
+++ b/Lesson 6 - Working with Typography/styles.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8">
     <title>Styles Conference</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header class="container group">
-        <h1 class="logo"><strong>Styles Conference</strong></h1>
+        <h1 class="logo">
+            <a href="styles.html">Styles <br> Conference</a>
+        </h1>
 
         <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
