--- a/Lesson 6 - Working with Typography/text.html
+++ b/Lesson 6 - Working with Typography/text.html
@@ -1,7 +1,10 @@
 <!doctype html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <title>Styles Conference</title>
     <link rel="stylesheet" href="text.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400&display=swap" rel="stylesheet">
 </head>
 
 <body>
