--- a/Lesson 7 - Setting Backgrounds & Gradients/index.html
+++ b/Lesson 7 - Setting Backgrounds & Gradients/index.html
@@ -13,5 +13,9 @@
     <div class="img">
         Div with an Image Backgrounds
     </div>
+    
+    <div class="one-img">
+        Only one image
+    </div>
 </body>
 </html>
