added different background image variations on divs

--- a/Lesson 7 - Setting Backgrounds & Gradients/index.html
+++ b/Lesson 7 - Setting Backgrounds & Gradients/index.html
@@ -17,5 +17,13 @@
     <div class="one-img">
         Only one image
     </div>
+    
+    <div class="offset">
+        Offset
+    </div>
+    
+    <div class="center">
+        Centered
+    </div>
 </body>
 </html>
