added congratulations box applying the above knowledge

--- a/Lesson 7 - Setting Backgrounds & Gradients/index.html
+++ b/Lesson 7 - Setting Backgrounds & Gradients/index.html
@@ -25,5 +25,9 @@
     <div class="center">
         Centered
     </div>
+    
+    <div class="notice-success">
+        Woo hoo! Congratulations, you did it!
+    </div>
 </body>
 </html>
