--- a/Lesson 7 - Setting Backgrounds & Gradients/styles.html
+++ b/Lesson 7 - Setting Backgrounds & Gradients/styles.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -46,8 +46,8 @@
                 <p>Joining us from all around the world, are over twenty fantastic speakers who currently operate in the industry. Come along to listen to them speak on their stories. Our panellists are.</p>
             </section>
             <!--
-            Schedule
-            -->
+                Schedule
+                -->
             <section class="teaser col-1-3">
                 <a href="schedule.html">
                     <h5>Schedule</h5>
@@ -56,8 +56,8 @@
                 <p>Enjoy three inspiring and action-packed days of talks, gatherings and all-around good times. Fun for everyone interested in tech and websites in general.</p>
             </section>
             <!--
-            Venue
-            -->
+                Venue
+                -->
             <section class="teaser col-1-3">
                 <a href="venue.html">
                     <h5>Venue</h5>
@@ -79,5 +79,4 @@
         </nav>
     </footer>
 </body>
-
 </html>
