--- a/Lesson 7 - Setting Backgrounds & Gradients/styles2.html
+++ b/Lesson 7 - Setting Backgrounds & Gradients/styles2.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Styles Conference</title>
-        <link rel="stylesheet" href="/assets/stylesheets/styles2.css">
-    </head>
-    <body>
-        <h1>Styles Conference</h1>
-        <p>Every year, the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>Styles Conference</title>
+    <link rel="stylesheet" href="/assets/stylesheets/styles2.css">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="speakers.html">Speakers</a>
+            <a href="schedule.html">Schedule</a>
+            <a href="venue.html">Venue</a>
+            <a href="register.html">Register</a>
+        </nav>
+    </header>
+
+    <h1>
+        <a href="index.html">Styles Conference</a>
+    </h1>
+    <p>Every year, the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
+
+    <footer>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="speakers.html">Speakers</a>
+            <a href="schedule.html">Schedule</a>
+            <a href="venue.html">Venue</a>
+            <a href="register.html">Register</a>
+        </nav>
+    </footer>
+</body>
+
 </html>
