--- a/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/index.html
+++ b/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <header class="container">
-        <h1>
-            <a href="index.html">Styles Conference</a>
+    <header class="container group">
+        <h1 class="logo">
+            <a href="index.html">Styles <br> Conference</a>
         </h1>
         <h3>
             August 24&ndash;26th &mdash; Chicago, IL
@@ -72,7 +72,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="container">
+    <footer class="primary-footer container group">
         <small>&copy; Styles Conference</small>
         
         <nav>
