--- a/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/index.html
+++ b/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Styles Conference</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
         </h3>
 
         <!-- Navigation Bar -->
-        <nav class="primary-nav">
+        <nav class="nav primary-nav">
             <a href="index.html">Home</a>
             <a href="speakers.html">Speakers</a>
             <a href="schedule.html">Schedule</a>
@@ -82,7 +83,7 @@
     <footer class="primary-footer container group">
         <small>&copy; Styles Conference</small>
         
-        <nav>
+        <nav class="nav">
             <a href="index.html">Home</a>
             <a href="speakers.html">Speakers</a>
             <a href="schedule.html">Schedule</a>
