testing gradient functions

--- a/Lesson 7 - Setting Backgrounds & Gradients/index.html
+++ b/Lesson 7 - Setting Backgrounds & Gradients/index.html
@@ -29,5 +29,9 @@
     <div class="notice-success">
         Woo hoo! Congratulations, you did it!
     </div>
+    
+    <div class="linear-gradient">
+        Example of linear gradient in HTML/CSS
+    </div>
 </body>
 </html>
