--- a/Lesson 11 - Organising Data with Tables/index.html
+++ b/Lesson 11 - Organising Data with Tables/index.html
@@ -19,37 +19,49 @@
         </thead>
         <tbody>
             <tr>
-                <td>Don&#8217;t Make Me Think by Steve Krug</td>
-                <td>In Stock</td>
-                <td>1</td>
-                <td>$30.02</td>
+                <td>
+                    <strong class="book-title">Don&#8217;t Make Me Think</strong>
+                    <span class="text-offset">by Steve Krug</span>
+                </td>
+                <td class="item-stock">In Stock</td>
+                <td class="item-qty">1</td>
+                <td class="item-price">$30.02</td>
             </tr>
             <tr>
-                <td>A Project Guide to UX Design by Russ Unger &#38; Carolyn Chandler</td>
-                <td>In Stock</td>
-                <td>2</td>
-                <td>$52.94 ($26.47 &#215; 2)</td>
+                <td>
+                    <strong class="book-title">A Project Guide to UX Design</strong>
+                    <span class="text-offset">by Russ Unger &#38; Carolyn Chandler</span>
+                </td>
+                <td class="item-stock">In Stock</td>
+                <td class="item-qty">2</td>
+                <td class="item-price">$52.94 <span class="item-multiple">($26.47 &#215; 2)</span></td>
             </tr>
             <tr>
-                <td>Introducing HTML5 by Bruce Lawson &#38; Remy Sharp</td>
-                <td>Out of Stock</td>
-                <td>1</td>
-                <td>$22.23</td>
+                <td>
+                    <strong class="book-title">Introducing HTML5</strong>
+                    <span class="text-offset">by Bruce Lawson &#38; Remy Sharp</span>
+                </td>
+                <td class="item-stock">Out of Stock</td>
+                <td class="item-qty">1</td>
+                <td class="item-price">$22.23</td>
             </tr>
             <tr>
-                <td>Bulletproof Web Design by Dan Cederholm</td>
-                <td>In Stock</td>
-                <td>1</td>
-                <td>$30.17</td>
+                <td>
+                    <strong class="book-title">Bulletproof Web Design</strong>
+                    <span class="text-offset">by Dan Cederholm</span>
+                </td>
+                <td class="item-stock">In Stock</td>
+                <td class="item-qty">1</td>
+                <td class="item-price">$30.17</td>
             </tr>
         </tbody>
         <tfoot>
             <tr>
-                <td colspan="3">Subtotal</td>
+                <td class="text-offset" colspan="3">Subtotal</td>
                 <td>$135.36</td>
             </tr>
             <tr>
-                <td colspan="3">Tax</td>
+                <td class="text-offset" colspan="3">Tax</td>
                 <td>$13.54</td>
             </tr>
             <tr>
@@ -57,33 +69,5 @@
                 <td>$148.90</td>
             </tr>
         </tfoot>
-    </table>
-    
-    <table class="elements">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Element</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Katara</td>
-                <td>Water</td>
-            </tr>
-            <tr>
-                <td>Sokka</td>
-                <td>N/A</td>
-            </tr>
-            <tr>
-                <td>Toph</td>
-                <td>Earth</td>
-            </tr>
-            <tr>
-                <td>Zuko</td>
-                <td>Fire</td>
-            </tr>
-            
-        </tbody>
     </table>
 </body></html>
